--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-mocks": "~1.4.3"
   },
   "dependencies": {
-    "angular-messages": "~1.4.3"
+    "angular-messages": "~1.4.3",
+    "ng-token-auth": "~0.0.28"
   }
 }
