--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.1.0",
   "description": "ionic_better_structure: An Ionic project",
   "dependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "lodash": "^4.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
