--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "angular-messages": "~1.4.3",
-    "ng-token-auth": "~0.0.28"
+    "ng-token-auth": "~0.0.28",
+    "angular-moment": "~0.10.3",
+    "moment": "~2.11.1"
   },
   "resolutions": {
     "angular-sanitize": "1.4.3",
-    "angular": "1.4.8"
+    "angular": "1.4.8",
+    "moment": ">=2.8.0 <2.11.0"
   }
 }
