Add username as sign in credential

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-messages": "~1.4.3",
     "ng-token-auth": "~0.0.28",
     "angular-moment": "~0.10.3",
-    "moment": "~2.11.1"
+    "moment": "~2.11.1",
+    "angular-recaptcha": "~2.4.0"
   },
   "resolutions": {
     "angular-sanitize": "1.4.3",
